--- a/todoservice/src/main/resources/application.properties
+++ b/todoservice/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.data.mongodb.database=mydb
-spring.data.mongodb.host=myapp_db
+spring.data.mongodb.host=${server}
 spring.data.mongodb.port=27017
